# django-backend-template

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  deployment.sh  pyproject.toml  requirements.txt
.github/workflows/: api_docs.yml  code_quality.yml  tests.yml
ansible/: playbook.yaml
auth/: backends.py  models.py  urls.py  utils.py
auth/migrations/: 0001_initial.py
config/: app.service  app.socket  gunicorn.conf.py  nginx.conf
config/ansible/: ansible.cfg  ini.yml  ubuntu.yml
core/: asgi.py  settings.py  urls.py
deployement/: nginx.conf
